hphp/test/slow/ext_mongo/generic/connection-single_error-001.php.expectf

Fatal error: %s
Stack trace:
#0 %sconnection-single_error-001.php(4): Mongo->__construct('http://foofas:5...')
#1 {main}
  thrown in %sconnection-single_error-001.php on line %d